<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginRight="6dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            card_view:cardCornerRadius="36dp"
            card_view:cardPreventCornerOverlap="false">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/img_content_description"
                android:src="@mipmap/ic_launcher" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/exit_message"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/MaterialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/btn_dialog_cancel"
            android:textColor="@color/color_white" />

        <View
            android:layout_width="14dp"
            android:layout_height="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_exit"
            style="@style/MaterialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/btn_dialog_exit"
            android:textColor="@color/color_white" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:id="@+id/native_ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </androidx.cardview.widget.CardView>

</LinearLayout>