<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/btn_close"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/title_menu_more_options"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="3dp"
                android:src="@drawable/ic_close"
                app:tint="#212121" />

        </RelativeLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gnt_no_margin"
            android:layout_marginBottom="@dimen/spacing_small" />

        <LinearLayout
            android:id="@+id/btn_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/img_favorite"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_menu_favorite_outline"
                app:tint="#212121" />

            <TextView
                android:id="@+id/txt_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/favorite_add"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_launch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/img_launch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_menu_launch"
                app:tint="#212121" />

            <TextView
                android:id="@+id/txt_launch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/title_menu_launch"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/img_share"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_menu_share"
                app:tint="#212121" />

            <TextView
                android:id="@+id/txt_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/title_menu_share"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/img_report"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_menu_report"
                app:tint="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/title_menu_report"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/img_feedback"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_menu_feedback"
                app:tint="#212121" />

            <TextView
                android:id="@+id/txt_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/title_menu_feedback"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>